--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Install, build, and upload your site
         uses: withastro/action@v0
+        env:
+          SKIP_ASTRO_CHECK: true
         with:
           # path: ./    # The root location of your Astro project inside the repository
           node-version: 18 # The specific version of Node that should be used to build your site
