--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/rss": "^4.0.1",
     "@astrojs/sitemap": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
+    "@tailwindcss/typography": "^0.5.10",
     "astro": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
